# DLSlime

./: CMakeLists.txt  README.md  build_slime.sh  pyproject.toml
bench/: transfer_bench.cpp
bench/cpp/: CMakeLists.txt  scheduler_bench.cpp  transfer_bench.cpp  transfer_scheduler.cpp
csrc/: CMakeLists.txt
csrc/bench/: transfer_bench.cpp
csrc/engine/: assignment.cpp  assignment.h  config.h  rdma_transport.cpp  rdma_transport.h
csrc/engine/nvlink/: memory_pool.cpp
csrc/engine/rdma/: CMakeLists.txt  memory_pool.h  rdma_assignment.cpp  rdma_assignment.h  rdma_config.h  rdma_context.cpp  rdma_context.h  rdma_scheduler.cpp  rdma_scheduler.h  rdma_transport.cpp  rdma_transport.h
csrc/python/: CMakeLists.txt  bind.cpp
csrc/python/pybind_json/: pybind_json.hpp
csrc/utils/: CMakeLists.txt  logging.h  utils.cpp
dlslime/: __init__.py  assignment.py  config.py
dlslime/remote_io/: base_endpoint.py  nvlink_endpoint.py  rdma_endpoint.py
dlslime/transport/: rdma_endpoint.py
example/: p2p.py  p2p_nvlink.py  p2p_rdma.py  sendrecv.py  slime_client.py
slime/: __init__.py
slime/ops/: sendrecv.py
slime/server/: http_server.py
slime/transfer_engine/: context.py  engine.py  engine.py.bk
slime/transport/: engine.py  rdma_endpoint.py
tests/python/engine_buffer_tensor_test/: receiver.py  sender.py
